// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load/saveAllServers 1`] = `
"{
  "strings": [
    "home",
    "__proto__",
    "script.js",
    "/** @param {NS} ns */\\nexport async function main(ns) {\\n  return ns.asleep(1000000);\\n}",
    "Awesome Script"
  ],
  "allServers": [
    {
      "ctor": "Server",
      "data": {
        "contracts": [],
        "cpuCores": 1,
        "ftpPortOpen": false,
        "hasAdminRights": true,
        "hostname": 0,
        "httpPortOpen": false,
        "ip": "67.4.8.1",
        "isConnectedTo": true,
        "maxRam": 8,
        "messages": [
          "hackers-starting-handbook.lit"
        ],
        "organizationName": "Home PC",
        "programs": [
          "NUKE.exe"
        ],
        "scripts": {
          "ctor": "JSONMap",
          "index": true,
          "data": [
            [
              2,
              {
                "ctor": "Script",
                "data": {
                  "code": 3,
                  "filename": 2,
                  "server": 0,
                  "metadata": {
                    "ctor": "FileMetadata",
                    "data": {
                      "atime": 123456789000,
                      "mtime": 123456789000,
                      "btime": 123456789000
                    }
                  }
                }
              }
            ]
          ]
        },
        "serversOnNetwork": [
          1
        ],
        "smtpPortOpen": false,
        "sqlPortOpen": false,
        "sshPortOpen": false,
        "textFiles": {
          "ctor": "JSONMap",
          "data": []
        },
        "purchasedByPlayer": true,
        "backdoorInstalled": false,
        "baseDifficulty": 1,
        "hackDifficulty": 1,
        "minDifficulty": 1,
        "moneyAvailable": 0,
        "moneyMax": 0,
        "numOpenPortsRequired": 5,
        "openPortCount": 0,
        "requiredHackingSkill": 1,
        "serverGrowth": 1,
        "runningScripts": [
          {
            "ctor": "RunningScript",
            "data": {
              "args": [],
              "dataMap": {},
              "filename": 2,
              "offlineExpGained": 0,
              "offlineMoneyMade": 0,
              "offlineRunningTime": 123456789.01,
              "onlineExpGained": 0,
              "onlineMoneyMade": 0,
              "onlineRunningTime": 7.210000000000004,
              "ramUsage": 1.6,
              "server": 0,
              "title": 4,
              "threads": 1,
              "temporary": false
            }
          }
        ]
      }
    },
    {
      "ctor": "Server",
      "data": {
        "contracts": [],
        "cpuCores": 1,
        "ftpPortOpen": false,
        "hasAdminRights": false,
        "hostname": 1,
        "httpPortOpen": false,
        "ip": "61.6.6.2",
        "isConnectedTo": false,
        "maxRam": 4,
        "messages": [],
        "organizationName": "Noodle Bar",
        "programs": [],
        "scripts": {
          "ctor": "JSONMap",
          "data": []
        },
        "serversOnNetwork": [
          0
        ],
        "smtpPortOpen": false,
        "sqlPortOpen": false,
        "sshPortOpen": false,
        "textFiles": {
          "ctor": "JSONMap",
          "data": []
        },
        "purchasedByPlayer": false,
        "backdoorInstalled": false,
        "baseDifficulty": 1,
        "hackDifficulty": 1,
        "minDifficulty": 1,
        "moneyAvailable": 70000,
        "moneyMax": 1750000,
        "numOpenPortsRequired": 0,
        "openPortCount": 0,
        "requiredHackingSkill": 1,
        "serverGrowth": 3000,
        "runningScripts": []
      }
    }
  ]
}"
`;

exports[`load/saveAllServers pruning RunningScripts 1`] = `
"{
  "strings": [
    "home",
    "__proto__",
    "script.js",
    "/** @param {NS} ns */\\nexport async function main(ns) {\\n  return ns.asleep(1000000);\\n}"
  ],
  "allServers": [
    {
      "ctor": "Server",
      "data": {
        "contracts": [],
        "cpuCores": 1,
        "ftpPortOpen": false,
        "hasAdminRights": true,
        "hostname": 0,
        "httpPortOpen": false,
        "ip": "67.4.8.1",
        "isConnectedTo": true,
        "maxRam": 8,
        "messages": [
          "hackers-starting-handbook.lit"
        ],
        "organizationName": "Home PC",
        "programs": [
          "NUKE.exe"
        ],
        "scripts": {
          "ctor": "JSONMap",
          "index": true,
          "data": [
            [
              2,
              {
                "ctor": "Script",
                "data": {
                  "code": 3,
                  "filename": 2,
                  "server": 0,
                  "metadata": {
                    "ctor": "FileMetadata",
                    "data": {
                      "atime": 123456789000,
                      "mtime": 123456789000,
                      "btime": 123456789000
                    }
                  }
                }
              }
            ]
          ]
        },
        "serversOnNetwork": [
          1
        ],
        "smtpPortOpen": false,
        "sqlPortOpen": false,
        "sshPortOpen": false,
        "textFiles": {
          "ctor": "JSONMap",
          "data": []
        },
        "purchasedByPlayer": true,
        "backdoorInstalled": false,
        "baseDifficulty": 1,
        "hackDifficulty": 1,
        "minDifficulty": 1,
        "moneyAvailable": 0,
        "moneyMax": 0,
        "numOpenPortsRequired": 5,
        "openPortCount": 0,
        "requiredHackingSkill": 1,
        "serverGrowth": 1,
        "runningScripts": []
      }
    },
    {
      "ctor": "Server",
      "data": {
        "contracts": [],
        "cpuCores": 1,
        "ftpPortOpen": false,
        "hasAdminRights": false,
        "hostname": 1,
        "httpPortOpen": false,
        "ip": "61.6.6.2",
        "isConnectedTo": false,
        "maxRam": 4,
        "messages": [],
        "organizationName": "Noodle Bar",
        "programs": [],
        "scripts": {
          "ctor": "JSONMap",
          "data": []
        },
        "serversOnNetwork": [
          0
        ],
        "smtpPortOpen": false,
        "sqlPortOpen": false,
        "sshPortOpen": false,
        "textFiles": {
          "ctor": "JSONMap",
          "data": []
        },
        "purchasedByPlayer": false,
        "backdoorInstalled": false,
        "baseDifficulty": 1,
        "hackDifficulty": 1,
        "minDifficulty": 1,
        "moneyAvailable": 70000,
        "moneyMax": 1750000,
        "numOpenPortsRequired": 0,
        "openPortCount": 0,
        "requiredHackingSkill": 1,
        "serverGrowth": 3000,
        "runningScripts": []
      }
    }
  ]
}"
`;
